# voluseg

./: .coveragerc  .gitignore  404.html  Dockerfile  LICENSE  README-docker.md  README.md  README_docker.md  __init__.py  example.py  index.html  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  sed_replacements.txt  setup.py  sitemap.xml  z0_preliminaries.py  z1_alignment.py  z2_brain_mask.py  z3_cell_detect.py  z4_cell_collect.py  z5_cell_clean.py  z6_components.py  z__main.py  z__parameters.py  zfun.py  zfun_cell.py
.github/workflows/: build_publish_apptainer.yaml  build_publish_docker.yaml  build_publish_docs.yaml  run_tests.yaml
_steps/: step0.py  step1.py  step2.py  step3.py  step4.py  step4_tocheck.py  step4a.py  step4b.py  step4c.py  step4d.py  step4e.py  step5.py
_tools/: ants_transformation.py  ball.py  baseline.py  block_initialize2.py  load_metadata.py  load_parameters.py  nii_image.py  nnmf_sparse.py  parameter_dictionary.py  parameters.py  parse_info.py  projection.py  sparseness.py
app/: app.py
assets/css/: styles.04728fdf.css  styles.6a775c26.css
assets/js/: 0186e6e8.0489bd6f.js  0186e6e8.f0f92d1c.js  09f1a2bb.3b51fbf2.js  09f1a2bb.3b90a724.js  0ab7ed82.5dca3ae9.js  (+172 more)
blog/: atom.xml  index.html  rss.xml
docs/: README.md  iac_aws_batch.md  pydoc-markdown.yml  requirements-docs.txt
markdown-page/: index.html
tests/: README.md  coverage_utils.py  requirements.txt  sitecustomize.pth  test_voluseg.py  tests.py
voluseg/: __init__.py  _update.py  pipeline.py
voluseg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+248 files in other folders)
